# atlas

./: CMakeLists.txt  justfile
.github/workflows/: app.yaml
atlas/application/: window.cpp
atlas/graphics/: light.cpp  particle.cpp
atlas/object/: compound.cpp  core_object.cpp
cli/src/: create.rs  lib.rs  main.rs  pack.rs  run.rs
editor/: .clangd  .gitignore  README.md  binding.gyp  electron-builder.config.cjs  eslint.config.js  eslint.config.mjs  main.js  package.json  tsconfig.base.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
editor/icons/: iconDebug.icns  iconRelease.icns
editor/native/: engine_bridge.mm
editor/scripts/: generate-build.ts
editor/src/main/: ipc.ts  main.ts  scheduler.ts  windows.ts
editor/src/main/project/: selectScene.ts
editor/src/main/tasks/: create-project.ts  register.ts  startup.ts  store-onboarding.ts
editor/src/preload/: preload.ts
editor/src/renderer/: index.html
editor/src/renderer/src/: main.tsx  router.tsx  styles.css
editor/src/renderer/src/components/: AppLogo.tsx  Button.tsx  TextField.tsx
editor/src/renderer/src/components/editor/: FileExplorer.tsx  Hierarchy.tsx  Inspector.tsx  TopSelector.tsx
editor/src/renderer/src/model/: app.ts
editor/src/renderer/src/views/: Editor.tsx  EditorOverlay.tsx  EditorSplash.tsx  Onboarding.tsx  Projects.tsx  Splash.tsx  Test.tsx
editor/src/renderer/src/views/modal/: CreateProject.tsx
editor/src/shared/types/: atlas.ts  ipc.ts
include/atlas/: component.h  particle.h  scene.h  window.h
include/atlas/core/: renderable.h
include/atlas/runtime/: c_api.h  context.h
runtime/: atlas.d.ts
runtime/lib/: c_api.cpp  context.cpp  scripting.cpp
